# UDPQuake

./: .bumpversion.cfg  README.md  pyproject.toml
.github/: copilot-instructions.md
UDPQuake/: __init__.py  main.py  mudp.py  pyproject.toml
src/udpquake/: __init__.py  __main__.py  earthquake_service.py  main.py  mudp.py
test/: __init__.py  test_earthquake_service.py  test_main.py  test_mudp.py
tests/: __init__.py  test_earthquake_service.py  test_main.py  test_main_module.py  test_mudp.py  test_mudp_updated.py
