[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "udpquake"
version = "0.1.0"
description = "A Raspberry Pi service that monitors USGS earthquake feeds and broadcasts seismic event data to Meshtastic mesh networks via UDP"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
keywords = ["earthquake", "usgs", "meshtastic", "raspberry-pi"]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "bump2version>=1.0.0",
]

[project.scripts]
udpquake = "UDPQuake.main:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/UDPQuake"
"Bug Tracker" = "https://github.com/yourusername/UDPQuake/issues"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88