[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "udpquake"
version = "0.1.0"
description = "A Raspberry Pi service that monitors USGS earthquake feeds and broadcasts seismic event data to Meshtastic mesh networks via UDP"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "meshtastic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]
enhanced = [
    "httpx>=0.24.0",
    "structlog>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/UDPQuake"
Repository = "https://github.com/yourusername/UDPQuake.git"
Issues = "https://github.com/yourusername/UDPQuake/issues"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
